# pedalphile

./: .gitignore  Cargo.toml  local-archive.sh
pkgbuild/: PKGBUILD
src/: config.rs  main.rs  module.rs  state.rs
src/module/: clicker.rs  save.rs  sequence.rs  soundboard.rs  voice.rs
