[package]
name = "pedalphile"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { version = "0.15.4", default-features = false, features = ["json", "json5", "serde_json"] }
dirs = "5.0.1"
inputbot = "0.6.0"
mki = "0.2.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
